<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="User" Id="{38b2271d-160d-4879-a990-df1d4ac1584b}">
    <Declaration><![CDATA[TYPE User:
	STRUCT
		UserID: INT;
		UserNumber: STRING;
		UserName: STRING;
		UserLevel: INT;
		UserExist: BOOL;
	END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>